--- a/homework.css
+++ b/homework.css
@@ -1,7 +1,61 @@
+html, body {
+    height: 100%;
+    width: 100%;
+}
 body
 {
     margin: 0;
-    padding: 0;
-
-    font-size: 12px;
+    padding: 0 15px;
+    position: relative;
+    font-size: 14px;
+}
+h3 {
+    margin: 0 0 5px 0;
+}
+h1 {
+    margin-top: 0;
+    padding-top: 18px;
+}
+.popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -55px 0 0 -205px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    width: 370px;
+    height: 70px;
+    padding: 20px;
+    background: #fff;
+    box-sizing: content-box;
+}
+.popup-wrap {
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.3);
+    z-index: 99;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.popup button {
+    margin: 15px 0 0 10px;
+    float: right;
+    padding: 2px 9px;
+    color: #333;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    border: 1px solid #b8b8b8;
+    cursor: pointer;
+    background: -moz-linear-gradient(#fefefe, #eeeeee);
+    background: -webkit-gradient(linear, 0 0, 0 100%, from(#fefefe), to(#eeeeee));
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fefefe', endColorstr='#eeeeee');
+}
+.close {
+    width: 14px;
+    height: 14px;
+    background: url("close.png");
+    float: right;
+    margin: -10px -10px 0 0;
+    cursor: pointer;
 }
