--- a/homework.css
+++ b/homework.css
@@ -5,9 +5,11 @@ html, body {
 body
 {
     margin: 0;
-    padding: 0 15px;
     position: relative;
     font-size: 14px;
+}
+.content {
+    padding: 0 15px;
 }
 h3 {
     margin: 0 0 5px 0;
